[build-system]
requires = ["setuptools>=59.5.0", "torch>=2.0.0", "ninja", "numpy<2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chamfer"
version = "2.0.0"
description = "Chamfer distance CUDA extension"
requires-python = ">=3.9,<3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["chamfer_dist"]
