[build-system]
requires = ["setuptools>=59.5.0", "torch>=2.0.0", "ninja", "numpy<2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pointnet2-cuda"
version = "1.0.0"
description = "PointNet2 CUDA extensions"
requires-python = ">=3.9,<3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["pointnet2_batch", "pointnet2_batch.*"]
