[build-system]
requires = ["setuptools>=59.5.0", "torch>=2.0.0", "ninja", "numpy<2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pointops"
version = "1.0.0"
description = "PointOps CUDA extensions"
requires-python = ">=3.9,<3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["pointops", "pointops.*"]
