[build-system]
requires = ["setuptools>=59.5.0", "numpy<2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-subsampling"
version = "1.0.0"
description = "Grid subsampling library"
requires-python = ">=3.9,<3.10"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
py-modules = ["grid_subsampling"]
